src/objects/Chapter__c.object
<CustomObject>
    <fields>
        <fullName>CC_Chapter_ID__c</fullName>
        <label>CC Chapter ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Combined_Chapter_ID_RE__c</fullName>
        <description>Combination of the CC Chapter ID, Publication ID and Location IDs.</description>
        <externalId>true</externalId>
        <inlineHelpText>Combination of the CC Chapter ID, Publication ID and Location IDs.</inlineHelpText>
        <label>CC Combined Chapter ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Location_Description__c</fullName>
        <label>CC Location Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Location_ID__c</fullName>
        <label>CC Location ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Publication_ID__c</fullName>
        <label>CC Publication ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Publication_Name__c</fullName>
        <label>CC Publication Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Status_ID__c</fullName>
        <label>CC Status ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_Description__c</fullName>
        <label>Chapter Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_Record_Name__c</fullName>
        <description>Combination of the CC Chapter Description, Publication Name and Location Descriptions.</description>
        <inlineHelpText>Combination of the CC Chapter Description, Publication Name and Location Descriptions.</inlineHelpText>
        <label>Chapter Record Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Chapters as Location</relationshipLabel>
        <relationshipName>Chapters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Chapters</relationshipLabel>
        <relationshipName>Chapters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_Issue__c</fullName>
        <label>Year (Issue)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Chapter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Publication__c</columns>
        <columns>Chapter_Description__c</columns>
        <columns>CC_Publication_Name__c</columns>
        <columns>Location__c</columns>
        <columns>Year_Issue__c</columns>
        <columns>CC_Combined_Chapter_ID_RE__c</columns>
        <columns>CC_Chapter_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Chapter</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chapters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>